# bolthackathon

./: README.md  main.py  pyproject.toml  requirements.txt
app/api/: urls.py
app/app/: settings.py  urls.py
app/config/: config.py
app/services/: chatbot.py  filetranslator.py  ocr.py  test.py
app/user/: admin.py  models.py  serializers.py  views.py
app/user/migrations/: 0001_initial.py  0002_usersession_chatsessions.py  0003_chatsessions_chat_history_usersession_pdf_image_urls.py  0004_usersession_ocr_text.py  0005_alter_usersession_session_activity.py  0006_usersession_session_keywords.py  0007_alter_usersession_session_name.py
